--- a/src/components/App.css
+++ b/src/components/App.css
@@ -319,20 +319,23 @@ main {
   }
 
   .title-container > p {
-    font-size: 20px;
+    font-size: 18px;
   }
 
   .timeframe-container {
     flex-direction: column;
     align-items: flex-start;
-    margin-top: 32px;
-    gap: 22px;
+    margin-top: 25px;
     gap: 13px;
     justify-content: unset;
   }
 
   .timeframe-curr {
-    font-size: 48px;
+    font-size: 59px;
+  }
+
+  .timeframe-prev {
+    font-size: 16px;
   }
 }
 
